--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/rag-data-schema
     username: root
-    password:
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
     jpa:
       hibernate:
@@ -12,4 +12,4 @@ spring:
 hibernate:
   dialect: org.hibernate.dialect.MySQL8Dialect
 openai:
-  api-key:
+  api-key: ${OPEN_AI_API_KEY}
